--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -133,27 +133,31 @@ jobs:
                   
       - name: Wait for backend to be ready
         run: |
-          for i in {1..12}; do
-            if curl -f http://backend:8080/actuator/health; then
+          for i in {1..20}; do
+            if docker run --rm --network test-net curlimages/curl:latest \
+              -fs http://backend:8080/actuator/health; then
               echo "Backend ready"
               break
             else
-              echo "Waiting for backend..."
+              echo "Waiting for backend ($i/20)..."
               sleep 5
             fi
           done
+
       
       - name: Wait for frontend to be ready
         run: |
-          for i in {1..12}; do
-            if curl -f http://frontend:80/; then
+          for i in {1..20}; do
+            if docker run --rm --network test-net curlimages/curl:latest \
+              -fs http://frontend:80; then
               echo "Frontend ready"
               break
             else
-              echo "Waiting for frontend..."
+              echo "Waiting for frontend ($i/20)..."
               sleep 5
             fi
           done
+
 
       - name: Install Node.js
         uses: actions/setup-node@v4
