--- a/k8s/apartment-chart/values.yaml
+++ b/k8s/apartment-chart/values.yaml
@@ -131,7 +131,7 @@ backend:
   image:
     repository: docker.io/kbtr/apartment-backend
     tag: "a559c8be5fe62ef1fd7c6c71e20e6f06e67d0b3a"
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
 
   service:
     type: ClusterIP
@@ -158,7 +158,7 @@ frontend:
   image:
     repository: docker.io/kbtr/apartment-frontend
     tag: "a559c8be5fe62ef1fd7c6c71e20e6f06e67d0b3a"
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
 
   service:
     type: ClusterIP
