--- a/k8s/apartment-chart/templates/backend-deployment.yaml
+++ b/k8s/apartment-chart/templates/backend-deployment.yaml
@@ -14,16 +14,20 @@ spec:
       labels:
         app: {{ .Chart.Name }}-backend
     spec:
-      containers:
-        - name: backend
-          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-          imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
-          ports:
-            - containerPort: {{ .Values.backend.service.port }}
-          env:
-            - name: SPRING_DATASOURCE_URL
-              value: "{{ .Values.backend.env.datasourceUrl }}"
-            - name: SPRING_DATASOURCE_USERNAME
-              value: "{{ .Values.backend.env.datasourceUser }}"
-            - name: SPRING_DATASOURCE_PASSWORD
-              value: "{{ .Values.backend.env.datasourcePassword }}"
+      template:
+        spec:
+          imagePullSecrets:
+            - name: dockerhub-secret
+          containers:
+            - name: backend
+              image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
+              imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
+              ports:
+                - containerPort: {{ .Values.backend.service.port }}
+              env:
+                - name: SPRING_DATASOURCE_URL
+                  value: "{{ .Values.backend.env.datasourceUrl }}"
+                - name: SPRING_DATASOURCE_USERNAME
+                  value: "{{ .Values.backend.env.datasourceUser }}"
+                - name: SPRING_DATASOURCE_PASSWORD
+                  value: "{{ .Values.backend.env.datasourcePassword }}"
