--- a/k8s/apartment-chart/templates/frontend-deployment.yaml
+++ b/k8s/apartment-chart/templates/frontend-deployment.yaml
@@ -14,12 +14,16 @@ spec:
       labels:
         app: {{ .Chart.Name }}-frontend
     spec:
-      containers:
-        - name: frontend
-          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
-          imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
-          ports:
-            - containerPort: {{ .Values.frontend.service.port }}
-          envFrom:
-            - configMapRef:
-                name: {{ include "apartment-chart.fullname" . }}-frontend-config
+      template:
+          spec:
+            imagePullSecrets:
+              - name: dockerhub-secret
+            containers:
+              - name: frontend
+                image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+                imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
+                ports:
+                  - containerPort: {{ .Values.frontend.service.port }}
+                envFrom:
+                  - configMapRef:
+                      name: {{ include "apartment-chart.fullname" . }}-frontend-config
