--- a/k8s/apartment-chart/templates/frontend-deployment.yaml
+++ b/k8s/apartment-chart/templates/frontend-deployment.yaml
@@ -3,27 +3,25 @@ kind: Deployment
 metadata:
   name: {{ include "apartment-chart.fullname" . }}-frontend
   labels:
-    app: {{ .Chart.Name }}-frontend
+    app: {{ include "apartment-chart.name" . }}-frontend
 spec:
   replicas: {{ .Values.frontend.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}-frontend
+      app: {{ include "apartment-chart.name" . }}-frontend
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}-frontend
+        app: {{ include "apartment-chart.name" . }}-frontend
     spec:
-      template:
-          spec:
-            imagePullSecrets:
-              - name: dockerhub-secret
-            containers:
-              - name: frontend
-                image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
-                imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
-                ports:
-                  - containerPort: {{ .Values.frontend.service.port }}
-                envFrom:
-                  - configMapRef:
-                      name: {{ include "apartment-chart.fullname" . }}-frontend-config
+      imagePullSecrets:
+        - name: dockerhub-secret
+      containers:
+        - name: frontend
+          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+          imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.frontend.service.port }}
+          env:
+            - name: VITE_API_URL
+              value: "{{ .Values.frontend.env.apiUrl }}"
