Update branch syntax in CI/CD workflow

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -2,9 +2,9 @@ name: CI - Docker Image CI/CD (ArgoCD GitOps)
 
 on:
   push:
-    branches: [main, cicd]
+    branches: [ "main", "cicd" ]
   pull_request:
-    branches: [main]
+    branches: [ "main" ]
 
 permissions:
   contents: read
