Fix frontend directory name in CI/CD workflow

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Install dependencies and build frontend
         run: |
-          cd frontend
+          cd Frontend
           npm ci
           npx cypress install
 
