--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -56,19 +56,11 @@ jobs:
         run: |
           until pg_isready -h localhost -U postgres; do sleep 2; done
 
-      - name: Load database dump
-        run: |
-          sudo apt-get install -y postgresql-client
-          psql -h localhost -U postgres -d apartment_db -f ../Backup/apartment_db.sql
-        env:
-          PGPASSWORD: admin
-
       - name: Run backend tests
-        working-directory: Backend
         run: |
           chmod +x gradlew
           ./gradlew test
-          
+
       - name: Upload Test Report (HTML)
         if: always()
         uses: actions/upload-artifact@v4
@@ -80,7 +72,7 @@ jobs:
   # 🌍 E2E Test (docker-compose + Cypress)
   # ==========================================
   e2e:
-    name: E2E via docker-compose + Cypress
+    name: E2E via docker-compose + Cypress (root)
     runs-on: ubuntu-latest
     env:
       COMPOSE_FILE: docker-compose.yml
@@ -92,16 +84,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 20
+      - name: Set up Node.js 20 (for Cypress CLI at repo root)
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: Frontend/package-lock.json
+          cache-dependency-path: |
+            package-lock.json
 
-      - name: Install dependencies and build frontend
+      - name: Install Cypress deps (repo root)
         run: |
-          cd Frontend
           npm ci
           npx cypress install
 
@@ -135,7 +127,7 @@ jobs:
           done
           echo "Frontend not up in time"; docker ps; exit 1
 
-      - name: Run Cypress E2E
+      - name: Run Cypress E2E (using root cypress.config.js)
         env:
           CYPRESS_baseUrl: ${{ env.BASE_URL }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
@@ -146,7 +138,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-results
+          name: frontend-cypress-results
           path: |
             cypress/videos
             cypress/screenshots
@@ -154,35 +146,6 @@ jobs:
       - name: Teardown containers
         if: always()
         run: docker compose -f "${{ env.COMPOSE_FILE }}" down -v
-
-  # ==========================================
-  # 🐳 Docker Push (Backend)
-  # ==========================================
-  docker-push-backend:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    name: Build & Push Backend Image
-    runs-on: ubuntu-latest
-    needs: [backend, e2e]
-    env:
-      IMAGE_NAME: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-backend
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Log in to Registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-
-      - name: Build & Push (SHA + latest)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Backend
-          push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.IMAGE_NAME }}:latest
 
   # ==========================================
   # 🐳 Docker Push (Frontend)
@@ -193,25 +156,70 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend, e2e]
     env:
-      IMAGE_NAME: ${{ secrets.REGISTRY_URL }}/${{ secrets.REGISTRY_USERNAME }}/apartment-frontend
+      IMAGE_NAME: heangkung/organicnow-frontend
+      TAG_SHA: ${{ github.sha }}
+      TAG_LATEST: latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push (SHA + latest)
+      - name: Build & Push (SHA tag)
         uses: docker/build-push-action@v5
         with:
-          context: ./Frontend
+          context: ./frontend
           push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_SHA }}
+
+      - name: Also tag :latest when on main
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_LATEST }}
+
+  # ==========================================
+  # 🐳 Docker Push (Backend)
+  # ==========================================
+  docker-push-backend:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: Build & Push Backend Image
+    runs-on: ubuntu-latest
+    needs: [backend, e2e]
+    env:
+      IMAGE_NAME: heangkung/organicnow-backend
+      TAG_SHA: ${{ github.sha }}
+      TAG_LATEST: latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push (SHA tag)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_SHA }}
+
+      - name: Also tag :latest when on main
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG_LATEST }}
 
   # ==========================================
   # 🔁 Update Helm values (GitOps for ArgoCD)
