--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -89,13 +89,12 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: |
-            package-lock.json
+          cache-dependency-path: Frontend/package-lock.json
 
       - name: Install Cypress deps (repo root)
         run: |
-          npm ci
-          npx cypress install
+          npm ci --prefix Frontend
+          npx cypress install --prefix Frontend
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
