--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -106,6 +106,14 @@ jobs:
           docker compose -f "${COMPOSE_FILE}" up -d --build
           docker ps
 
+      - name: Show backend logs
+        run: docker logs apartment-backend || true
+
+      - name: Test DB connection
+        run: |
+          docker exec apartment-backend pg_isready -h db -U postgres
+
+
       - name: Wait for backend to be healthy
         run: |
           set -euo pipefail
