--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -109,23 +109,19 @@ jobs:
       - name: Show backend logs
         run: docker logs apartment-backend || true
 
-      - name: Test DB connection
-        run: |
-          docker exec apartment-backend pg_isready -h db -U postgres
-
-
       - name: Wait for backend to be healthy
         run: |
-          set -euo pipefail
           for i in {1..60}; do
-            if curl -fsS "$HEALTH_URL_BACKEND" | grep -q '"status":"UP"'; then
+            if curl -fsS http://localhost:8080/actuator/health | grep -q '"status":"UP"'; then
               echo "Backend healthy ✅"
               exit 0
             fi
             echo "Waiting for backend... ($i/60)"
             sleep 2
           done
-          echo "Backend not healthy in time ❌"; docker ps; exit 1
+          echo "Backend not healthy in time ❌"
+          docker logs apartment-backend
+          exit 1
 
       - name: Wait for frontend to be up
         run: |
