--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: backend
           image: devopsapartment-backend:latest 
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
