--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,6 +11,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 management.endpoints.web.exposure.include=health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.metrics.enable.processormetrics=false
+management.metrics.enable.tomcat=false
+management.metrics.binders.system.enabled=false
+
 
 server.address=0.0.0.0
 server.port=8080
