--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,17 +6,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 management.endpoints.web.exposure.include=health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-management.metrics.enable.processormetrics=false
-management.metrics.enable.tomcat=false
-management.metrics.binders.system.enabled=false
 
+management.metrics.binders.system.enabled=false
+management.metrics.binders.jvm.enabled=false
+management.metrics.binders.processor.enabled=false
+management.metrics.binders.tomcat.enabled=false
 
 server.address=0.0.0.0
 server.port=8080
+
 admin.email=admin@apt.com
 admin.password=ict555
