--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -19,6 +19,9 @@ management.metrics.binders.jvm.enabled=false
 management.metrics.binders.processor.enabled=false
 management.metrics.binders.tomcat.enabled=false
 
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
 server.address=0.0.0.0
 server.port=8080
 
